<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>colcon_list_packages_changed_since</name>
  <version>0.1.0</version>
  <description>
    List packages that have changed files since point in git history.</description>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>
  <license>BSD 3-Clause License</license>

  <exec_depend>colcon-core</exec_depend>
  <exec_depend>git</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
